copy updates, add staff image, ready for deploy removal of coming soon page

--- a/about.html
+++ b/about.html
@@ -134,7 +134,7 @@
                       alt="Thomas E. Bundy Photo">
                   <h3>Thomas E. Bundy</h3>
                   <h4 class="staff-title">Managing Partner</h4>
-                  <p class="staff-info">Tom, a 1947 graduate of Notre Dame brings over 40 years experience in small business and insurance fields.  His background as a consultant, broker, entrepreneur, and small business owner provides perspective to effectively serve HBS client.</p>
+                  <p class="staff-info">Tom, a 1974 graduate of Notre Dame brings over 40 years experience in small business and insurance fields.  His background as a consultant, broker, entrepreneur, and small business owner provides perspective to effectively serve HBS client.</p>
               </section>
 
               <section class="col-sm-4 text-center staff-block">
@@ -143,7 +143,7 @@
                       alt="Don Viti Photo">
                   <h3>Don Viti</h3>
                   <h4 class="staff-title">Managing Partner</h4>
-                  <p class="staff-info">Don, a graduate of PTI School of International Business in 1973, started his career with Bankers Life and Casualty in 1985.  He left Bankers to open his own agency in 1996.  In 2008 he partnered with Tom Bundy.  Don has experience in senior, individual, and group products.</p>
+                  <p class="staff-info">Don, a graduate of PTI School of International Business in 1973, started his career with Bankers Life and Casualty in 1985.  He left Bankers to open his own agency in 1996.  In 2008 he partnered with Tom Bundy.  Don has experience in senior, individual, and group products. He developed the senior division of HBS.</p>
               </section>
 
               <section class="col-sm-4 text-center staff-block">
@@ -169,7 +169,7 @@
               </section>
 
               <section class="col-sm-4 text-center staff-block">
-                  <img src="images/staff/not_available.jpg"
+                  <img src="images/staff/chris_zappa.jpg"
                       class="img-circle img-responsive center-block"
                       alt="Chris Zappa Photo">
                   <h3>Chris Zappa</h3>
@@ -183,7 +183,7 @@
                       alt="Jessica Campbell Photo">
                   <h3>Jessica Campbell</h3>
                   <h4 class="staff-title">Adminstrator</h4>
-                  <p class="staff-info">Jessica joined HBS in 2015 from US Airways where she was a record analyst.  She is an integral part of the day to day business helping both clients and staff.</p>
+                  <p class="staff-info">Jessica joined HBS in 2014 from US Airways where she was a record analyst.  She is an integral part of the day to day business helping both clients and staff.</p>
               </section>
 
             </div><!-- row -->
