--- a/group_products.html
+++ b/group_products.html
@@ -128,8 +128,8 @@
             <div class="row">
                 <div class="col-xs-12">
                   <div class="jumbotron">
-                    <p class="text-center">HBS has a full line of group products to handle the needs of your business.  We have agents that specialize in helping your group get the right benefits at the right price.</p>
-                    <p class="text-center">We broker for all the major carriers in the region as well as many national carriers.</p> <br/>
+                    <p class="text-center">HBS has a full line of group products to handle the needs of your business.  Our group division agents specialize in helping your group get the right benefits at the right price.</p>
+                    <p class="text-center">We represent all the major carriers in the region as well as many national carriers.</p> <br/>
                     <p>
                       <h4>Products</h4>
                       <ul>
@@ -148,13 +148,13 @@
                     <p>
                       <ul>
                         <li>
-                          <b>Service:</b> We will assist you and your employees in resolving claims problems and handle other benefits questions and issues.  We will provide you with our toll-free number, your Account Manager’s business card for each of your employees, and bulletin board posters to create awareness of our service availability.
+                          <b>Service:</b> We will assist you and your employees in resolving claims issues and handle other benefits questions.  We will provide you with our toll-free number, your Account Manager’s business card for each of your employees, and bulletin board posters to create awareness of our service availability.
                         </li>
                         <li>
                           <b>Market Knowledge:</b> We will keep you current on new ideas and concepts in the benefits arena, to help you control costs while retaining valued employees.  We will evaluate all viable carriers when seeking quotes for your coverage.
                         </li>
                         <li>
-                          <b>Compliance Expertise:</b> We will advise you on insurance compliance issues such as COBRA, HIPAA, coverage mandates, etc.
+                          <b>Compliance Expertise:</b> We will advise you on insurance compliance issues such as COBRA, HIPAA, ACA, coverage mandates, etc.
                         </li>
                       </ul>
                     </p>
@@ -166,11 +166,10 @@
                         <li>How does the new healthcare exchange affect my business?</li>
                         <li>Will premiums go up?</li>
                         <li>Can my business delay implementing the new requirements?</li>
-                        <li>Do I qualify for a subsidy?</li>
+                        <li>Do I qualify for tax credit?</li>
                       </ul>
                     </p> 
                     <br/>
-                    <p>Contact us for help finding the right strategies for your needs.</p>
                 </div>
             </div><!-- row -->
         </div><!-- content container -->
