--- a/index_real.html
+++ b/index_real.html
@@ -121,11 +121,20 @@
             <div class="row">
                 <div class="col-xs-12">
                   <div class="jumbotron">
-                    <p>Health Benefit Services is an independent agency specializing in group, individual and senior health including Medicare and retirement strategies.</p>
-                    <p>Since 1996 HBS has been dedicated to providing clients with superior service and managing your health care and retirement needs.</p>
-                    
+                    <p>Health Benefit Services is an indepenct agency specializing in group, individual and senior health including medicine and retirement strategies.</p>
+                    <h3>Our commitment to you:</h3>
                     <p>
-                      We accomplish the above through a system of combining modern technology with good old fashioned service.  Your personal agent directly services your account from answering questions to understanding and addressing your specific needs.  A team of product specialists is behind your agent, staying on top of the complex and ever-changing insurance market.  And a full time support staff takes care of the day to day aspects of your insurance coverage.  For fast service, please contact us at 1-800-374-8984.
+                      <ul>
+                        <li>
+                          <b>Service:</b> We will assist you and your employees in resolving claims problems and handle other benefits questions and issues.  We will provide you with our toll-free number, your Account Manager’s business card for each of your employees, and bulletin board posters to create awareness of our service availability.
+                        </li>
+                        <li>
+                          <b>Market Knowledge:</b> We will keep you current on new ideas and concepts in the benefits arena, to help you control costs while retaining valued employees.  We will evaluate all viable carriers when seeking quotes for your coverage.
+                        </li>
+                        <li>
+                          <b>Compliance Expertise:</b> We will advise you on insurance compliance issues such as COBRA, HIPAA, coverage mandates, etc.
+                        </li>
+                      </ul>
                     </p>
                   </div>
 
@@ -218,7 +227,7 @@
                     <div class="leftblock"><span class="badge"><span class="glyphicon glyphicon-time"></span></span></span></span></div>
                     <div class="rightblock bottom-border-none">
                       <h4 class="contact-block-heading">Hours</h4>
-                      <p class="contact-block-paragraph">M - F | 8:30 am - 4:30 pm</p>
+                      <p class="contact-block-paragraph">M - F | 9 am - 5 pm</p>
                     </div>
                   </div>
 
