--- a/individual_products.html
+++ b/individual_products.html
@@ -128,11 +128,11 @@
             <div class="row">
                 <div class="col-xs-12">
                   <div class="jumbotron">
-                    <p class="text-center">We broker for all the major carriers in the region as well as many national carriers.</p><br/>
+                    <p class="text-center">We represent all the major carriers in the region as well as many national carriers.</p><br/>
                     <p>
-                      <h4>Health Care</h4>
+                      <h4>Health Care for Individuals and Families</h4>
                         <ul>
-                          <li>HBS has specialists who will work to obtain your maximum tax advantages and subsidies with the ACA.</li>
+                          <li>HBS has specialists who will work to obtain your maximum tax advantages and subsidies allowed by law with the ACA.</li>
                           <li>We will find the right plan to fit your needs.</li>
                         </ul>
                     </p>
@@ -151,7 +151,6 @@
                         <li>Retirement Savings Plans</li>
                       </ul>
                     </p>
-                    <p>Contact us for help finding the right strategies for your needs.</p>
                 </div>
             </div><!-- row -->
         </div><!-- content container -->
