--- a/senior_products.html
+++ b/senior_products.html
@@ -128,11 +128,11 @@
             <div class="row">
                 <div class="col-xs-12">
                   <div class="jumbotron">
-                    <p class="text-center">HBS has a full line of senior products.  We have agents that specialize in helping seniors<br/> find the right products that best fit their needs.</p><br/>
-                    <p>Need help in finding the right plan to go with your medicare:
+                    <p class="text-center">HBS has a full line of senior products.  With in home consultation HBS experienced brokers will assess your situation and help guide you in selecting the right plan for your needs.  There is never a fee for our service.</p><br/>
+                    <p>Need help in finding the right plan to go with your medicare?
                         <ul>
-                          <li>Whether its a medicare advantage plan or a medicare supplement</li>
-                          <li>We broker for all the major carriers in the region as well as many national carriers</li>
+                          <li>Medicare supplement (ADD) health insurance plans</li>
+                          <li>We represent for all the major carriers in the region as well as many national carriers</li>
                         </ul>
                     </p>
                     <p>
@@ -144,12 +144,10 @@
                           </ul>
                         <li>Long term care</li>
                         <li>Short term care</li>
-                          <ul>
-                            <li>Dental Plans</li>
-                            <li>Vision Plans</li>
-                            <li>Hearing Plans</li>
-                            <li>Hospital Indemnity Plans</li>
-                          </ul>
+                        <li>Dental Plans</li>
+                        <li>Vision Plans</li>
+                        <li>Hearing Plans</li>
+                        <li>Hospital Indemnity Plans</li>
                         <li>Protecting your retirement income through safe fixed secure products and <span class="senior-underline">no fees</span>.</li>
                       </ul>
                     </p>
