--- a/comingsoon.html
+++ b/comingsoon.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="insurance, Insurance, Health Insurance, health insurance, Health insurance, Group, Aetna, AIG, Highmark, Health America, Group insurance, Short Term Medical, Pennsylvania health insurance">
     <meta name="description" content="Health benefit services, health insurance specialists and compliance experts serving PA">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/comingsoon.css">
     <title>HBSPA - Health Benefits Services LLC Pennsylvania</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
     <div class ="container-fluid">
       <div class="row height-200">
         <div class="col-xs-offset-2 col-xs-8 col-md-offset-3 col-md-6 text-center">
-          <img src="images/hbs_logo.png" alt="Health Benefit Services"/>
+          <img class="coming-soon-img" src="images/hbs_logo.png" alt="Health Benefit Services"/>
         </div>
       </div>
       <div class="row height-300">
@@ -27,13 +27,13 @@
     <div class ="container negative-margin-top">
       <div class="row">
         <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <h1>Health Benefit Services</h1>
+          <h1 class="coming-soon-title">Health Benefit Services</h1>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-offset-3 col-xs-6 col-md-6 text-center">
-          <h2 class="text-uppercase coming-soon">Coming Soon!</h2>
+          <h2 class="text-uppercase coming-soon coming-soon-title">Coming Soon!</h2>
           <p>We're currently working on creating our new website.<br/>  
           We'll be launching soon.  Please check back.</p>
         </div>
